# ruffruleannotator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
ruffruleannotator/: __init__.py  main.py  ruffruleannotator.py  rulesets.py
test/: test_complex_pyproject.py  test_simple_pyproject.py
